--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -1,5 +1,4 @@
 .active {
-
   color: black;
   border-color: #f2f5f8;
   background-color: #f2f5f8;
@@ -10,4 +9,9 @@
   border: dotted 3px #999;
   min-height: 60px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+button {
+  margin-top: 10px;
+  margin-right: 10px;
 }
